Fix the styling issue on mobile

--- a/styles/index.module.less
+++ b/styles/index.module.less
@@ -117,6 +117,12 @@
   font-weight: bold;
 }
 
+@media screen and (max-width: @screen-lg) {
+  .coinsTable colgroup col:first-child {
+    width: 150px;
+  }
+}
+
 .signalExplanation {
   margin-left: 15px;
 }
